Minimum working version
still has bugs